# convection-diffusion-equation-fdto

./: 2dplots.py  Makefile  README.txt  bounds.m  closed_loop_simulation.m  full_system.m  heat.py  heat2d.py  hessian_objective.m  ocp_full_discretization.m  plot_cpp.m  plots.py  stagecost.m  terminalcost.m
cpp/: CMakeLists.txt  Makefile  args.hxx  heat_nlp.cpp  heat_nlp.hpp  main.cpp  matrixop.cpp  matrixop.hpp
docu/: docu.tex  structure.tex
results/: closed_cost_vs_horizon_length.m  closed_cost_vs_horizon_length.txt  closed_cost_vs_steps.m  closed_cost_vs_steps_10.txt  closed_cost_vs_steps_20.txt  openloop_plot.m  solver.txt
results/results10/: openloop_y1.txt  openloop_y10.txt  openloop_y100.txt  openloop_y101.txt  openloop_y102.txt  openloop_y103.txt  openloop_y104.txt  openloop_y105.txt  openloop_y106.txt  openloop_y107.txt  openloop_y108.txt  openloop_y109.txt  openloop_y11.txt  openloop_y110.txt  openloop_y111.txt  openloop_y112.txt  openloop_y113.txt  openloop_y114.txt  openloop_y115.txt  openloop_y116.txt  openloop_y117.txt  openloop_y118.txt  openloop_y119.txt  openloop_y12.txt  openloop_y120.txt  openloop_y121.txt  openloop_y122.txt  openloop_y123.txt  openloop_y124.txt  openloop_y125.txt  openloop_y126.txt  openloop_y127.txt  openloop_y128.txt  openloop_y129.txt  openloop_y13.txt  openloop_y130.txt  openloop_y131.txt  openloop_y132.txt  openloop_y133.txt  openloop_y134.txt  (+160 more)
results/results20/: openloop_y1.txt  openloop_y10.txt  openloop_y100.txt  openloop_y101.txt  openloop_y102.txt  openloop_y103.txt  openloop_y104.txt  openloop_y105.txt  (+192 more)
(+200 files in other folders)
